--- a/AppConfiguration/Az.AppConfiguration.csproj
+++ b/AppConfiguration/Az.AppConfiguration.csproj
@@ -9,6 +9,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>./bin</OutputPath>
+    <PublishDir>$(OutputPath)</PublishDir>
     <!-- Some methods are marked async and don't have an await in them -->
     <NoWarn>1998</NoWarn>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
