Updated hiding implementation to use the new config schema. Removed any variants with SkipToken. Changed version number to 0.1.0.

--- a/AppConfiguration/Az.AppConfiguration.csproj
+++ b/AppConfiguration/Az.AppConfiguration.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>0.1.0</Version>
     <LangVersion>7.1</LangVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
@@ -10,9 +11,10 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>./bin</OutputPath>
     <PublishDir>$(OutputPath)</PublishDir>
+    <NuspecFile>Az.AppConfiguration.nuspec</NuspecFile>
+    <NoPackageAnalysis>true</NoPackageAnalysis>
     <!-- Some methods are marked async and don't have an await in them -->
     <NoWarn>1998</NoWarn>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
